--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,84 +1,39 @@
 :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  .content {
-    display: flex;
-    margin: 25px auto 35px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  svg#clouds {
-    position: fixed;
-    bottom: -160px;
-    left: -230px;
-    z-index: -10;
-    width: 1920px;
-  }
-
-  /* Responsive Styles */
-  @media screen and (max-width: 767px) {
-    svg#rocket-smoke {
-      right: 120px;
-      transform: rotate(-5deg);
-    }
-  }
-
-  @media screen and (max-width: 575px) {
-    svg#rocket-smoke {
-      display: none;
-      visibility: hidden;
-    }
-  }
-
-:host ::ng-deep .mat-form-field-flex {
-    background: rgb(245, 245, 245);
-  }
-
-:host ::ng-deep .mat-form-field-label {
-    color: black;
-}
-:host ::ng-deep .mat-input-element::placeholder {
-    color: black;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-:host ::ng-deep .mat-grid-tile {
-    /* background: lightblue; */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 8px 0;
 }
 
-.country-content {
-    height: 100%;
-width: 100%;
+p {
+  margin: 0;
 }
 
-:host ::ng-deep .mat-grid-tile-content{
-    /* position: relative; */
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden */
+.content {
+  display: flex;
+  margin: 15px auto;
+  padding: 0 16px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
-:host ::ng-deep .mat-grid-tile-content img {
-   background-size: cover;
+
+svg#clouds {
+  position: fixed;
+  bottom: -160px;
+  left: -230px;
+  z-index: -10;
+  width: 1920px;
 }
